# hackernews_scrapper

./: .env.dev.sample  .env.prod.sample  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
hackernews/: Dockerfile  Dockerfile.prod  config.py  manage.py  pyproject.toml
hackernews/app/: __init__.py  api_v1.py  tasks.py
hackernews/app/api/: parsers.py  serializers.py
hackernews/app/api/endpoints/: posts.py
hackernews/app/database/: models.py
hackernews/app/utils/: hn_scrapper.py
hackernews/tests/: test_api.py  test_fetch_data.py  test_post_model.py
hackernews/tests/fixtures/: hn.html
